# freelance-platform-analytics

./: .gitignore  Guide_Comprehension_Freelance.docx  RAPMOD.MD  RAPMOD.docx  RAPMOD.md  README.md  app.py  dataset_freelance_groupe.csv  fix_notebook_refs.py  index.php  patch_notebook_paths.py  patch_test_analyse.py  pyproject.toml  requirements.txt  router.php
ajax/: admin_handler.php  teacher_handler.php
analysis/: analyse-bivariée.py  analyse_univariee.py
analysis/ml/: eda.py  loader.py  main.py  principe_analyse.md  q1_statistics.py  q2_correlation.py  q3_clustering.py  q4_classification.py  utils.py  visualization.py
analysis/notebooks/: test_analyse.ipynb  test_analyse_uni.ipynb
css/: style.css
data/: dataset_freelance_groupe.csv  generate_data.py  principe-fonction.md
dataset/: README.md  config.py  dataset_freelance_groupe.csv  dataset_generator.py  exporter.py  generator.py  models.py  principe-fonction.md  principe_fonction.md  run.py  seed.py  test_generate_data.ipynb  validator.py
includes/: auth.php  config.php  functions.php
js/: app.js
pages/: login.php  register.php
pages/admin/: certificates.php  dashboard.php  modules.php  students.php  teachers.php
pages/student/: certificates.php  courses.php  dashboard.php  evaluation.php  lesson.php
pages/teacher/: dashboard.php  evaluations.php  lessons.php
sql/: schema.sql
src/: q1_univariate.py  q2_bivariate.py  q3_clustering.py  q4_classification.py  utils.py
