[project]
name = "freelance-platform-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "jupyterlab>=4.6.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
